--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.8",
     "postcss": "^8.4.14",
-    "autoprefixer": "^10.4.7",
-    "typescript": "^4.8.3"
+    "autoprefixer": "^10.4.7"
+  },
+  "devDependencies": {
+    "typescript": "^4.8.3",
+    "@types/react": "^18.2.0",
+    "@types/node": "^18.0.0"
   }
 }
